  . Fixed bug #80391 (Iterable not covariant to mixed). (Nikita)
  . Fixed bug #80393 (Build of PHP extension fails due to configuration gap
    with libtool). (kir dot morozov at gmail dot com)

- Fileinfo:
  . Fixed bug #77961 (finfo_open crafted magic parsing SIGABRT). (cmb)

- IMAP
  . Fixed bug #80438 (imap_msgno() incorrectly warns and return false on valid UIDs in PHP 8.0.0). (girgias)

- Intl:
  . Fixed bug #80425 (MessageFormatAdapter::getArgTypeList redefined). (Nikita)

- Opcache:
  . Fixed bug #80404 (Incorrect range inference result when division results
    in float). (Nikita)
  . Fixed bug #80377 (Opcache misses executor_globals). (Nikita)
  . Fixed bug #80433 (Unable to disable the use of the AVX command when using
    JIT). (Nikita)
  . Fixed bug #80447 (Strange out of memory error when running with JIT).
    (Dmitry)

- OpenSSL:
  . Fixed bug #80368 (OpenSSL extension fails to build against LibreSSL due to
    lack of OCB support). (Nikita)

- Phar:
  . Fixed bug #73809 (Phar Zip parse crash - mmap fail). (cmb)

- Phpdbg:
  . Fixed bug #76813 (Access violation near NULL on source operand). (cmb)

- SPL:
  . Fixed #62004 (SplFileObject: fgets after seek returns wrong line). (cmb)

- Standard:
  . Fixed bug #80366 (Return Value of zend_fstat() not Checked). (sagpant, cmb)

- Tidy:
  . Fixed bug #77594 (ob_tidyhandler is never reset). (cmb)

- Tokenizer:
  . Fixed bug #80462 (Nullsafe operator tokenize with TOKEN_PARSE flag fails).
    (Nikita)

- XML:
  . XmlParser opaque object renamed to XMLParser for consistency with other XML objects. (girgias)

26 Nov 2020, PHP 8.0.0

- BZ2:
  . Fixed bug #71263 (fread() does not report bzip2.decompress errors). (cmb)

- CLI:
  . Allow debug server binding to an ephemeral port via `-S localhost:0`. (Sara)

- COM:
  . Fixed bug #55847 (DOTNET .NET 4.0 GAC new location). (cmb)
  . Fixed bug #62474 (com_event_sink crashes on certain arguments). (cmb)

- Calendar: